# molpha-verifier

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: verify_data_update.rs
src/: bitmap.rs  coalition.rs  error.rs  lib.rs  message.rs  onchain.rs  payload.rs  scalar.rs  selection.rs  state.rs  test_signer.rs  verify.rs
tests/: proptests.rs
